Prevent nav overflows from breaking header
Unlock the height of the header to allow the menu to break onto its own
line and expand the header if necessary, which makes the site much more
usable if the window is too small.

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -6,7 +6,8 @@
 
 .site-header {
   position: relative;
-  height: $height-header;
+  min-height: $height-header;
+  padding: 0 2rem;
   background: $color-background-header;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
